# GameCubeRecompiled

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPLEMENTATION.md  CONTRIBUTING.md  CONTROLLER_IMPROVEMENTS.md  Cargo.toml  EULA.md  INSTALL.md  LICENSE  README.md  RUNTIME_SYSTEM_IMPLEMENTATION.md  SECURITY.md  TROUBLESHOOTING.md  build.rs  play.sh
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  RECOMPILATION_COMPARISON.md
game/: Cargo.toml
game/src/: assets.rs  main.rs  recompiled.rs
gcrecomp-cli/: Cargo.toml
gcrecomp-cli/src/: build.rs  commands.rs  compression.rs  main.rs  output.rs
gcrecomp-core/: Cargo.toml
gcrecomp-core/src/: lib.rs  target.rs
gcrecomp-core/src/recompiler/: analysis.rs  codegen.rs  debug.rs  decoder.rs  enrich.rs  error.rs  game_quirks.rs  ghidra.rs  linker.rs  mod.rs  optimizer.rs  parser.rs  pattern_detection.rs  pipeline.rs  structure.rs  validator.rs
gcrecomp-core/src/recompiler/analysis/: control_flow.rs  data_flow.rs  inter_procedural.rs  loop_analysis.rs  mod.rs  pointer.rs  structs.rs  type_inference.rs
gcrecomp-core/src/recompiler/codegen/: memory.rs  mod.rs  register.rs  simd.rs
gcrecomp-core/src/recompiler/ir/: builder.rs  instruction.rs  mod.rs  optimizer.rs  to_rust.rs
gcrecomp-core/src/recompiler/optimizer/: inlining.rs  loop_opt.rs  mod.rs
gcrecomp-core/src/runtime/: calling.rs  context.rs  memory.rs  mod.rs  sdk.rs
gcrecomp-core/src/runtime/sdk/: dvd.rs  heap.rs  interrupt.rs  mod.rs  os.rs  timer.rs
gcrecomp-core/tests/: codegen_test.rs  decoder_test.rs  parser_test.rs  utils.rs
gcrecomp-core/tests/comparison/: mod.rs
gcrecomp-core/tests/functional/: mod.rs
gcrecomp-lua/: Cargo.toml
gcrecomp-lua/src/: convert.rs  engine.rs  error.rs  lib.rs
gcrecomp-lua/src/bindings/: callbacks.rs  config.rs  cpu.rs  disc_fs.rs  memory.rs  mod.rs  optimize.rs  pipeline.rs  runtime.rs  ui.rs  verify.rs  web.rs
gcrecomp-runtime/: Cargo.toml
gcrecomp-runtime/src/: lib.rs  runtime.rs
gcrecomp-runtime/src/audio/: ai.rs  dsp.rs  mixer.rs  mod.rs  output.rs
gcrecomp-runtime/src/graphics/: framebuffer.rs  gx.rs  gx_state.rs  mod.rs  post_processing.rs  post_processing.wgsl  renderer.rs  shaders.rs  splash.rs  splash.wgsl  upscaler.rs  vi.rs
gcrecomp-runtime/src/graphics/gx/: draw.rs  lighting.rs  mod.rs  pipeline.rs  state.rs  tev.rs  transform.rs  vertex.rs
gcrecomp-runtime/src/hardware/: embedded.rs  gamecube.rs  mod.rs
gcrecomp-runtime/src/input/: button_mapper.rs  controller.rs  gamecube_mapping.rs  gyro.rs  gyro_sensor.rs  mod.rs  profiles.rs  switch_pro.rs
gcrecomp-runtime/src/input/backends/: gilrs.rs  mod.rs  sdl2.rs  xinput.rs
gcrecomp-runtime/src/memory/: aram.rs  dma.rs  mapper.rs  mod.rs  ram.rs  vram.rs
gcrecomp-runtime/src/mods/: api.rs  hook_integration.rs  hooks.rs  loader.rs  mod.rs
gcrecomp-runtime/src/runtime/: mod.rs  performance.rs  save_state.rs
gcrecomp-runtime/src/texture/: cache.rs  formats.rs  loader.rs  mapper.rs  mod.rs  upscaler.rs
gcrecomp-runtime/src/tracing/: calls.rs  instruction.rs  memory.rs  mod.rs
gcrecomp-runtime/src/video/: mod.rs  modes.rs  vblank.rs  vi.rs
gcrecomp-ui/: Cargo.toml
gcrecomp-ui/src/: app.rs  config.rs  integration.rs  lib.rs  main.rs
gcrecomp-ui/src/ui/: audio_settings.rs  button_mapping.rs  controller_config.rs  fps_settings.rs  game_settings.rs  graphics_settings.rs  input_settings.rs  main_menu.rs  mod.rs  performance_stats.rs
gcrecomp-web/: Cargo.toml
gcrecomp-web/src/: main.rs  routes.rs  security.rs  server.rs
lua/: init.lua  pipeline.lua
lua/game/: init.lua  menus.lua
lua/optimize/: default.lua
lua/ui/: audio_settings.lua  controller_config.lua  fps_settings.lua  game_settings.lua  graphics_settings.lua  init.lua  main_menu.lua
lua/verify/: default.lua
lua/web/: routes.lua  templates.lua
recompiled/: Cargo.toml
recompiled/src/: lib.rs
scripts/: README.md  build-all.sh  generate_fidb.py  ghidra_export.py  linker_template.ld
tests/edge_cases/: game_quirks.rs  instruction_edge_cases.rs  malformed_binary.rs  memory_edge_cases.rs  mod.rs
tests/fixtures/: README.md
tests/integration/: decoder_test.rs  pipeline_test.rs
tests/regression/: mod.rs
web/static/: index.html
