[workspace]
members = [
    "gcrecomp-core",
    "gcrecomp-cli",
    "gcrecomp-ui",
    "gcrecomp-runtime",
    "gcrecomp-lua",
    "gcrecomp-web",
    "game",
    "recompiled",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Recompiled PowerPC code is inherently modular (wrapping) arithmetic, so debug
# overflow checks would spuriously panic. ponytail: off here; emit explicit
# wrapping_* in codegen if a finer distinction is ever needed.
[profile.dev]
overflow-checks = false

# The generated `recompiled` crate is huge (millions of lines). debuginfo=2 makes
# rustc stack-overflow (SIGSEGV) and balloons compile time/memory, so turn it off
# and skip optimization there. ponytail: the generated code is machine output, not
# something we debug at the Rust level — DWARF for it is pure cost.
[profile.dev.package.recompiled]
debug = false
opt-level = 0
incremental = false

[workspace.package]
version = "0.0.1-alpha"
edition = "2021"
authors = ["Christopher Erleigh <christopher.erleigh@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/KaiserGranatapfel/GameCubeRecompiled"
homepage = "https://github.com/KaiserGranatapfel/GameCubeRecompiled"
documentation = "https://docs.rs/gcrecomp-core"
keywords = ["gamecube", "recompiler", "powerpc", "rust", "emulation"]
categories = ["development-tools", "emulators"]
description = "Static recompiler for GameCube games to Rust"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Binary parsing
goblin = "0.8"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# UI dependencies
iced = "0.12"
winit = "0.30"
# Downgrade wgpu to 0.19 to be compatible with iced 0.12's web-sys =0.3.67 requirement
wgpu = "0.19"

# Runtime dependencies
minifb = "0.25"

# Memory optimization dependencies
smallvec = "1.13"
bitvec = "1.0"

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }

# Verification
crc32fast = "1.4"
sha2 = "0.10"

# Web server
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Archive handling
zip = "2.2"

# Compression
zstd = "0.13"

