[package]
name = "gcrecomp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for GameCube static recompiler"

[[bin]]
name = "gcrecomp"
path = "src/main.rs"

[dependencies]
gcrecomp-core = "0.0.1-alpha"
clap = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

