[package]
name = "gcrecomp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[lib]
# The `///` examples here are illustrative pseudo-code (missing imports/setup),
# not executable contracts; they were all failing as doctests. ponytail: don't
# run them as tests. Convert to runnable examples if they become contracts.
doctest = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
goblin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
bitvec = { workspace = true }
which = "5.0"
zstd = { workspace = true }

[dev-dependencies]

