[package]
name = "gcrecomp-lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lua scripting integration for GameCube static recompiler"

[dependencies]
gcrecomp-core = { path = "../gcrecomp-core" }
gcrecomp-runtime = { path = "../gcrecomp-runtime" }
gcrecomp-ui = { path = "../gcrecomp-ui" }
mlua = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }
