[package]
name = "gcrecomp-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
minifb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
libloading = "0.8"
gcrecomp-core = { path = "../gcrecomp-core" }
gilrs = "0.10"
# Downgrade sdl2 to be compatible with minifb's sdl2-sys requirement
sdl2 = "0.35"
hidapi = "2.0"
image = "0.24"
imageproc = "0.23"
bytemuck = "1.14"
cpal = "0.15"
bincode = "1.3"
dirs = "5.0"
glam = "0.24"

