[package]
name = "gcrecomp-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UI for GameCube static recompiler"

[dependencies]
gcrecomp-core = { path = "../gcrecomp-core" }
gcrecomp-runtime = { path = "../gcrecomp-runtime" }
iced = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = "5.0"

