[package]
name = "gcrecomp-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web dashboard for GameCube static recompiler"

[[bin]]
name = "gcrecomp-web"
path = "src/main.rs"

[dependencies]
gcrecomp-core = { path = "../gcrecomp-core" }
gcrecomp-lua = { path = "../gcrecomp-lua" }
gcrecomp-ui = { path = "../gcrecomp-ui" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
